# sp1

examples/: Cargo.toml
examples/wrong-hash/program/: Cargo.toml
examples/wrong-hash/program/elf/: riscv32im-succinct-zkvm-elf
examples/wrong-hash/program/src/: main.rs
examples/wrong-hash/script/: Cargo.toml  proof-wrong-hash.json
examples/wrong-hash/script/src/: main.rs
